@startuml

left to right direction
title Data Model

skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFEF5
skinparam classFontSize 10
skinparam class {
  BackgroundColor #FFF4CC
  BorderColor #B8860B
  ArrowColor #B8860B
}

package "On-Chain (Solidity)" #FFF4CC {
  class Identity <<struct>> {
    userDID : address
    creditTier : CreditTier
    incomeBand : IncomeBand
    dataPointer : bytes32
  }

  class Consent <<struct>> {
    consentID : bytes32
    requesterDID : address
    status : ConsentStatus
    startDate : uint96
    endDate : uint96
  }

  enum CreditTier {
    None
    LowBronze..HighPlatinum
  }

  enum IncomeBand {
    None
    upto25k..moreThan500k
  }

  enum ConsentStatus {
    None
    Granted
    Requested
    Revoked
    Expired
  }
}

package "Off-Chain (Python)" #DFF0FF {
  class FinancialData <<dataclass>> {
    userDID : str
    assets : List[Asset]
    liabilities : List[Liability]
    lastUpdated : str
    metadata : dict
  }

  class Asset <<dataclass>> {
    assetID : str
    assetType : AssetType
    value : float
    ownershipPercentage : float
    lastUpdated : str
    metadata : dict
  }

  class Liability <<dataclass>> {
    liabilityID : str
    liabilityType : LiabilityType
    amount : float
    interestRate : float
    monthlyPayment : float
    dueDate : str
    isOverdue : bool
    lastUpdated : str
    metadata : dict
  }

  enum AssetType {
    savings
    checking
    investment
    property
    vehicle
    other
  }

  enum LiabilityType {
    credit_card
    mortgage
    auto_loan
    personal_loan
    student_loan
    other
  }
}

Identity "1" -- "1" FinancialData : dataPointer\n(hash reference)
Identity --> CreditTier
Identity --> IncomeBand
Consent --> ConsentStatus
FinancialData "1" *-- "0..*" Asset
FinancialData "1" *-- "0..*" Liability
Asset --> AssetType
Liability --> LiabilityType

@enduml
